<resources>
    <string name="app_name">LockMeow</string>
    <string name="login">Ingresar</string>
    <string name="email">Email</string>
    <string name="pasword">Contraseña</string>
    <string name="loginBtn">Login</string>
    <string name="register">Registro</string>
    <string name="register_btm">Registrarse</string>
    <string name="click_to_login">Click para registrarse</string>
    <string name="click_to_register">Click para ingresar</string>
    <string name="log_out">Log out</string>
    <string name="logout">Lock Meow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>