<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".Registration">

    <TextView
        android:text="@string/register"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#2F0081"
        android:fontFamily="@font/pixel_georgia_bold"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pixel_georgia_bold"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pasword"
            android:hint="@string/pasword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pixel_georgia_bold"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:text="@string/register_btm"
        android:layout_height="wrap_content"
        android:textColor="#210055"
        android:fontFamily="@font/pixel_georgia_bold"/>
    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:textStyle="normal"
        android:textSize="18sp"
        android:gravity="center"
        android:id="@+id/loginNow"
        android:text="@string/click_to_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pixel_georgia_bold"/>
</LinearLayout>